fix: notification separator visibility

--- a/style.css
+++ b/style.css
@@ -444,8 +444,8 @@ popover modelbutton:only-child {
   color: rgba(248, 221, 208, 0.7);
 }
 .notification separator {
-  margin: 0 0.75rem;
-  background-color: rgba(248, 221, 208, 0.5);
+  background: rgba(248, 221, 208, 0.5);
+  min-height: 1px;
 }
 .notification .content {
   margin-top: 0.75rem;
